--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact & Photos</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    
+    <section>
+        <div>
+            <h2>Contact</h2>
+            <p>Contact us to get free support</p>
+        </div>
+        <form action="#">
+            <div>
+                <textarea name="" id="textarea" placeholder="Description"></textarea>
+            </div>
+        </form>
+    </section>
 </body>
 </html>
