add style.css file and index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type"               content="Contact and Photos" />
     <meta property="og:title"              content="My homework for Facebook" />
     <meta property="og:description"        content="My homework10 descrioption" />
-    <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+    <meta property="og:image"              content="https://i.ibb.co/vXkD2Ws/mohamed-ajufaan-GFc-Www-GNu-w-unsplash.png" />
     <script src="https://kit.fontawesome.com/3648c978ca.js" crossorigin="anonymous"></script>
     <title>Contact & Photos</title>
     <link rel="stylesheet" href="css/reset.css">
