--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta property="og:image"              content="https://i.ibb.co/vXkD2Ws/mohamed-ajufaan-GFc-Www-GNu-w-unsplash.png" />
     <script src="https://kit.fontawesome.com/3648c978ca.js" crossorigin="anonymous"></script>
     <title>Contact & Photos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -22,8 +25,8 @@
     <section>
         <div class="container">
             <div>
-                <h2>Contact</h2>
-                <p>Contact us to get free support</p>
+                <h2 class="title">Contact</h2>
+                <p class="text">Contact us to get free support</p>
             </div>
             <form action="#" method="GET" class="form-wrapper">
                 <div class="left-block">
@@ -40,6 +43,19 @@
                     </div>
                 </div>
             </form>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div>
+                <h2 class="photo-title">Photos</h2>
+                <p class="photo-text">See our latest photos from restaurant and hotel</p>
+            </div>
+            <div class="image-block">  
+                <img src="images/sea.png" alt="sea">
+                <img src="images/view.png" alt="view">
+                <img src="images/home.png" alt="home">
+            </div>
         </div>
     </section>
 </body>
