add fonts and style file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -43,11 +44,43 @@
                     </div>
                 </div>
             </form>
+            <div class="icon-wrapper flex">
+                <div class="box-wrapper flex">
+                    <div class="block flex">
+                        <i class="fas fa-envelope"></i>
+                    </div>
+                    <h2 class="contact-title">Email</h2>
+                    <ul>
+                        <li><a class="contact cnt" href="mailto:example@yahoo.com">example@yahoo.com</a></li>
+                        <li><a class="contact" href="mailto:exampleemail2@yahoo.com">exampleemail2@yahoo.com</a></li>
+                    </ul>
+                </div>
+                <div class="box-wrapper flex">
+                    <div class="block flex">
+                        <i class="fas fa-phone-alt"></i>
+                    </div>
+                    <h2 class="contact-title">Phone</h2>
+                    <ul>
+                        <li><a class="contact cnt" href="tel:123-456-7890" target="_blank">+0 320 422 4254</a></li>
+                        <li><a class="contact" href="tel:123-456-7890" target="_blank">+0 342 552 523</a></li>
+                    </ul>
+                </div>
+                <div class="box-wrapper flex">
+                    <div class="block flex">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <h2 class="contact-title">Location</h2>
+                    <ul>
+                        <li><a class="contact cnt" href="https://www.google.com/maps/place/Main+Ave,+Chicago,+IL+60613,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@41.9561312,-87.661221,17z/data=!3m1!4b1!4m5!3m4!1s0x880fd235651bad63:0x41072742595444bb!8m2!3d41.9561312!4d-87.6590323" target="_blank">Main Str Chicago Ilinois</a></li>
+                        <li><a class="contact" href="https://www.google.com/maps/place/Main+St,+Queens,+NY,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@40.7359744,-73.8272839,17z/data=!3m1!4b1!4m5!3m4!1s0x89c260618039000d:0x4e4216fa03a650cf!8m2!3d40.7359744!4d-73.8250952" target="_blank">Main Street New York City</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
     <section>
-        <div class="container">
-            <div>
+        <div class="img-container">
+            <div class="text-container">
                 <h2 class="photo-title">Photos</h2>
                 <p class="photo-text">See our latest photos from restaurant and hotel</p>
             </div>
@@ -58,5 +91,8 @@
             </div>
         </div>
     </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
