add fonts and index file

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <i class="fas fa-envelope"></i>
                     </div>
                     <h2 class="contact-title">Email</h2>
-                    <ul>
-                        <li><a class="contact cnt" href="mailto:example@yahoo.com">example@yahoo.com</a></li>
+                    <ul class="ul-box">
+                        <li><a class="contact" href="mailto:example@yahoo.com">example@yahoo.com</a></li>
                         <li><a class="contact" href="mailto:exampleemail2@yahoo.com">exampleemail2@yahoo.com</a></li>
                     </ul>
                 </div>
@@ -60,9 +60,9 @@
                         <i class="fas fa-phone-alt"></i>
                     </div>
                     <h2 class="contact-title">Phone</h2>
-                    <ul>
-                        <li><a class="contact cnt" href="tel:123-456-7890" target="_blank">+0 320 422 4254</a></li>
+                    <ul class="ul-box">
                         <li><a class="contact" href="tel:123-456-7890" target="_blank">+0 342 552 523</a></li>
+                        <li><a class="contact" href="tel:123-456-7890" target="_blank">+0 320 422 4254</a></li>
                     </ul>
                 </div>
                 <div class="box-wrapper flex">
@@ -70,8 +70,8 @@
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <h2 class="contact-title">Location</h2>
-                    <ul>
-                        <li><a class="contact cnt" href="https://www.google.com/maps/place/Main+Ave,+Chicago,+IL+60613,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@41.9561312,-87.661221,17z/data=!3m1!4b1!4m5!3m4!1s0x880fd235651bad63:0x41072742595444bb!8m2!3d41.9561312!4d-87.6590323" target="_blank">Main Str Chicago Ilinois</a></li>
+                    <ul class="ul-box">
+                        <li><a class="contact" href="https://www.google.com/maps/place/Main+Ave,+Chicago,+IL+60613,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@41.9561312,-87.661221,17z/data=!3m1!4b1!4m5!3m4!1s0x880fd235651bad63:0x41072742595444bb!8m2!3d41.9561312!4d-87.6590323" target="_blank">Main Str Chicago Ilinois</a></li>
                         <li><a class="contact" href="https://www.google.com/maps/place/Main+St,+Queens,+NY,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@40.7359744,-73.8272839,17z/data=!3m1!4b1!4m5!3m4!1s0x89c260618039000d:0x4e4216fa03a650cf!8m2!3d40.7359744!4d-73.8250952" target="_blank">Main Street New York City</a></li>
                     </ul>
                 </div>
@@ -91,8 +91,61 @@
             </div>
         </div>
     </section>
-    <footer>
-
+    <footer class="footer-bg">
+        <div class="footer-container">
+            <div class="footer-wraper flex">
+                <div class="footer-block">
+                    <h2 class="footer-title">Zetta Hotels</h2>
+                    <p class="footer-text">Our hotel is an image of quality and profesionalism combined with hard work and precision. You can expect only the best services from our staff.</p>
+                    <div class="icon-box flex">
+                        <div class="icon fb flex">
+                            <i class="fab fa-facebook-f"></i>
+                        </div>
+                        <div class="icon twitter flex">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="icon g-plus flex">
+                            <i class="fab fa-google-plus-g"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-block">
+                    <h2 class="footer-title">Useful links</h2>
+                    <ul>
+                        <li>Blog</li>
+                        <li>Rooms</li>
+                        <li>Gift Card</li>
+                        <li>Testimonials</li>
+                    </ul>
+                </div>
+                <div class="footer-block">
+                    <h2 class="footer-title">Privacy</h2>
+                    <ul>
+                        <li>Career</li>
+                        <li>About us</li>
+                        <li>Contact us</li>
+                        <li>Services</li>
+                    </ul>
+                </div>
+                <div class="footer-block">
+                    <h2 class="footer-title">Contact Info</h2>
+                    <ul>
+                        <li>
+                            <i class="far fa-envelope"></i>
+                            <span>example@yahoo.com</span>
+                        </li>
+                        <li>
+                            <i class="fas fa-phone-alt"></i>
+                            <span>+0 320 422 4254</span>
+                        </li>
+                        <li>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Main Str Chicago Ilinois</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
