add index file and css folder

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer-block">
+                <div class="footer-block link-block">
                     <h2 class="footer-title">Useful links</h2>
                     <ul>
                         <li class="space"><a class="footer-li" href="#">Blog</a></li>
@@ -118,7 +118,7 @@
                         <li><a class="footer-li" href="#">Testimonials</a></li>
                     </ul>
                 </div>
-                <div class="footer-block">
+                <div class="footer-block privacy-block">
                     <h2 class="footer-title">Privacy</h2>
                     <ul>
                         <li class="space"><a class="footer-li space" href="#">Career</a></li>
@@ -127,20 +127,20 @@
                         <li><a class="footer-li" href="#">Services</a></li>
                     </ul>
                 </div>
-                <div class="footer-block">
+                <div class="footer-block info-blocks">
                     <h2 class="footer-title">Contact Info</h2>
                     <ul>
-                        <li>
+                        <li class="ftr-li">
                             <i class="far fa-envelope footer-icon"></i>
-                            <span class="footer-span">example@yahoo.com</span>
+                            <a href="mailto:exampleemail2@yahoo.com"><span class="footer-span">example@yahoo.com</span></a>
                         </li>
-                        <li>
+                        <li class="ftr-li">
                             <i class="fas fa-phone-alt footer-icon"></i>
-                            <span class="footer-span">+0 320 422 4254</span>
+                            <a href="tel:123-456-7890" target="_blank"><span class="footer-span">+0 320 422 4254</span></a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt footer-icon"></i>
-                            <span class="footer-span">Main Str Chicago Ilinois</span>
+                            <a href="https://www.google.com/maps/search/Main+Str+Chicago+Ilinois/@41.8393763,-88.0121478,10z/data=!3m1!4b1" target="_blank"><span class="footer-span">Main Str Chicago Ilinois</span></a>
                         </li>
                     </ul>
                 </div>
