--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 <p class="photo-text">See our latest photos from restaurant and hotel</p>
             </div>
             <div class="image-block">  
-                <img src="images/sea.png" alt="sea">
-                <img src="images/view.png" alt="view">
-                <img src="images/home.png" alt="home">
+                <img class="img" src="images/sea.png" alt="sea">
+                <img class="img" src="images/view.png" alt="view">
+                <img class="img" src="images/home.png" alt="home">
             </div>
         </div>
     </section>
